Lowercase CMake commands.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,14 +1,14 @@
-INSTALL(DIRECTORY de COMPONENT doc-de
+install(DIRECTORY de COMPONENT doc-de
     DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
-INSTALL(DIRECTORY en COMPONENT doc-en
+install(DIRECTORY en COMPONENT doc-en
     DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
-INSTALL(DIRECTORY es COMPONENT doc-es
+install(DIRECTORY es COMPONENT doc-es
     DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
-INSTALL(DIRECTORY fr COMPONENT doc-fr
+install(DIRECTORY fr COMPONENT doc-fr
     DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
-INSTALL(DIRECTORY hu COMPONENT doc-hu
+install(DIRECTORY hu COMPONENT doc-hu
     DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
-INSTALL(DIRECTORY ru COMPONENT doc-ru
+install(DIRECTORY ru COMPONENT doc-ru
     DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
 
-ADD_SUBDIRECTORY(help)
+add_subdirectory(help)
