--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,14 +1,14 @@
 install(DIRECTORY de COMPONENT doc-de
-    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
+    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE PATTERN "*.sxw" EXCLUDE)
 install(DIRECTORY en COMPONENT doc-en
-    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
+    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE PATTERN "*.sxw" EXCLUDE)
 install(DIRECTORY es COMPONENT doc-es
-    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
+    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE PATTERN "*.sxw" EXCLUDE)
 install(DIRECTORY fr COMPONENT doc-fr
-    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
+    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE PATTERN "*.sxw" EXCLUDE)
 install(DIRECTORY hu COMPONENT doc-hu
-    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
+    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE PATTERN "*.sxw" EXCLUDE)
 install(DIRECTORY ru COMPONENT doc-ru
-    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
+    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE PATTERN "*.sxw" EXCLUDE)
 
 add_subdirectory(help)
