--- a/doc/help/CMakeLists.txt
+++ b/doc/help/CMakeLists.txt
@@ -1,14 +1,34 @@
-install(DIRECTORY de COMPONENT help-de
-    DESTINATION ${KICAD_HELP} PATTERN ".svn" EXCLUDE PATTERN "docs_src" EXCLUDE)
-install(DIRECTORY en COMPONENT help-en
-    DESTINATION ${KICAD_HELP} PATTERN ".svn" EXCLUDE PATTERN "docs_src" EXCLUDE)
-install(DIRECTORY es COMPONENT help-es
-    DESTINATION ${KICAD_HELP} PATTERN ".svn" EXCLUDE PATTERN "docs_src" EXCLUDE)
-install(DIRECTORY fr COMPONENT help-fr
-    DESTINATION ${KICAD_HELP} PATTERN ".svn" EXCLUDE PATTERN "docs_src" EXCLUDE)
-install(DIRECTORY it COMPONENT help-it
-    DESTINATION ${KICAD_HELP} PATTERN ".svn" EXCLUDE PATTERN "docs_src" EXCLUDE)
-install(DIRECTORY pt COMPONENT help-pt
-    DESTINATION ${KICAD_HELP} PATTERN ".svn" EXCLUDE PATTERN "docs_src" EXCLUDE)
-install(DIRECTORY ru COMPONENT help-ru
-    DESTINATION ${KICAD_HELP} PATTERN ".svn" EXCLUDE PATTERN "docs_src" EXCLUDE)
+install(DIRECTORY de DESTINATION ${KICAD_HELP}
+    COMPONENT help-de
+    PATTERN ".svn" EXCLUDE
+    PATTERN "docs_src" EXCLUDE)
+
+install(DIRECTORY en DESTINATION ${KICAD_HELP}
+    COMPONENT help-en
+    PATTERN ".svn" EXCLUDE
+    PATTERN "docs_src" EXCLUDE)
+
+install(DIRECTORY es DESTINATION ${KICAD_HELP}
+    COMPONENT help-es
+    PATTERN ".svn" EXCLUDE
+    PATTERN "docs_src" EXCLUDE)
+
+install(DIRECTORY fr DESTINATION ${KICAD_HELP}
+    COMPONENT help-fr
+    PATTERN ".svn" EXCLUDE
+    PATTERN "docs_src" EXCLUDE)
+
+install(DIRECTORY it DESTINATION ${KICAD_HELP}
+    COMPONENT help-it
+    PATTERN ".svn" EXCLUDE
+    PATTERN "docs_src" EXCLUDE)
+
+install(DIRECTORY pt DESTINATION ${KICAD_HELP}
+    COMPONENT help-pt
+    PATTERN ".svn" EXCLUDE
+    PATTERN "docs_src" EXCLUDE)
+
+install(DIRECTORY ru DESTINATION ${KICAD_HELP}
+    COMPONENT help-ru
+    PATTERN ".svn" EXCLUDE
+    PATTERN "docs_src" EXCLUDE)
