doc update. tutorials moved in the new directory kicad-doc/tutorials

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,4 +26,5 @@ mark_as_advanced(KICAD_DOCS KICAD_HELP)
 
 # CMake will look in these dirs for nested 'CMakeLists.txt' files.
 # Resources.
-add_subdirectory(doc)
+add_subdirectory(doc/tutorials)
+add_subdirectory(help)
