--- a/doc/help/CMakeLists.txt
+++ b/doc/help/CMakeLists.txt
@@ -33,11 +33,11 @@ install(DIRECTORY ru DESTINATION ${KICAD_HELP}
     PATTERN ".svn" EXCLUDE
     PATTERN "docs_src" EXCLUDE)
 
-install(DIRECTORY ru DESTINATION ${KICAD_HELP}
+install(DIRECTORY file_formats DESTINATION ${KICAD_HELP}
     COMPONENT file_formats
     PATTERN ".svn" EXCLUDE
     PATTERN "docs_src" EXCLUDE)
 
-install(DIRECTORY ru DESTINATION ${KICAD_HELP}
+install(DIRECTORY footprints_doc DESTINATION ${KICAD_HELP}
     COMPONENT footprints_doc
     PATTERN ".svn" EXCLUDE
