install zn_CH tutorial

--- a/doc/tutorials/CMakeLists.txt
+++ b/doc/tutorials/CMakeLists.txt
@@ -34,3 +34,9 @@ install(DIRECTORY ru DESTINATION ${KICAD_DOCS}
     PATTERN "*.odt" EXCLUDE
     PATTERN "*.sxw" EXCLUDE)
 
+install(DIRECTORY zh_CN DESTINATION ${KICAD_DOCS}
+    COMPONENT doc-zh_CN
+    PATTERN ".svn" EXCLUDE
+    PATTERN "*.odt" EXCLUDE
+    PATTERN "*.sxw" EXCLUDE)
+
