russian doc update, thx vik

--- a/doc/help/CMakeLists.txt
+++ b/doc/help/CMakeLists.txt
@@ -34,11 +34,11 @@ install(DIRECTORY fr
 #         PATTERN ".svn" EXCLUDE
 #         PATTERN "docs_src" EXCLUDE)
 
-# install(DIRECTORY ru
-#         DESTINATION ${KICAD_HELP}
-#         COMPONENT help-ru
-#         PATTERN ".svn" EXCLUDE
-#         PATTERN "docs_src" EXCLUDE)
+install(DIRECTORY ru
+        DESTINATION ${KICAD_HELP}
+        COMPONENT help-ru
+        PATTERN ".svn" EXCLUDE
+        PATTERN "docs_src" EXCLUDE)
 
 install(DIRECTORY file_formats
         DESTINATION ${KICAD_HELP}
